# DiscordBot-Rust

./: .env  .gitignore  Cargo.toml  README.md  build.rs  config.default.toml
migrations/2023-07-05-201421_create_mappings/: down.sql  up.sql
src/: config.rs  event_handler.rs  main.rs  migrations.rs  model.rs  schema.rs  timed_event.rs  util.rs
src/actions/: mapping.rs  mod.rs
src/handlers/: mod.rs
